--- a/assets/style.css
+++ b/assets/style.css
@@ -3,23 +3,13 @@
 Theme Name: The Parenting Place 2018
 Theme URI: 
 Author: Adam Harpur
-Author URI: https://adamharpur.com
+Author URI: https://codinglab.tech
 Description: Description
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: the-parenting-place-2018
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-
-the-parenting-place-2018 is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-*/
-/**
-* This is used to map the theme colors
 */
 /**
 * General Colours
@@ -31,184 +21,9 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 /***
 * Site Fonts
 */
-/* Desktops and laptops ----------- */
-@media only screen and (min-width: 1224px) {
-  .nav-menu-wrapper {
-    width: 100%;
-    height: auto;
-    position: fixed;
-    z-index: 1; }
-    .nav-menu-wrapper nav {
-      padding: 0;
-      height: 90px; }
-      .nav-menu-wrapper nav .nav-link {
-        color: #fffdfd;
-        font-size: 1.1em; } }
-
-.nav-menu-wrapper .navbar {
-  transition: background 0.4s linear; }
-
-.nav-menu-wrapper .past-banner {
-  background-color: #333; }
-
-nav ul {
-  margin-left: 3em; }
-
-nav .menu-item {
-  padding: 1em; }
-  nav .menu-item a:focus, nav .menu-item a:hover, nav .menu-item a:active {
-    border-bottom: 3px solid #00576d; }
-
-#sidebar {
-  z-index: 999;
-  background: #c1d82f;
-  color: #fff;
-  transition: all 1s; }
-
-.carousel {
-  margin-bottom: 4rem; }
-
-.carousel-item {
-  height: 32rem;
-  background-color: #777; }
-  .carousel-item > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    height: 32rem; }
-
-.carousel-caption-wrapper {
-  display: flex;
-  justify-content: center; }
-  .carousel-caption-wrapper .carousel-caption {
-    margin-top: 2em;
-    color: #fffdfd;
-    text-align: center;
-    border-radius: 5px;
-    padding: 1em;
-    z-index: 10; }
-
-@media (min-width: 40em) {
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4; }
-  .featurette-heading {
-    font-size: 50px; } }
-
-@media (min-width: 62em) {
-  .featurette-heading {
-    margin-top: 7rem; } }
-
-.tns-outer {
-  max-width: 100%; }
-  .tns-outer .card {
-    max-width: 100%; }
-
-.tns-inner {
-  flex: 0 0 50%;
-  overflow-x: hidden; }
-
-.controls-wrapper {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  width: 100%; }
-  .controls-wrapper .playbutton-wrapper button {
-    display: none; }
-  .controls-wrapper .controls {
-    display: flex; }
-    .controls-wrapper .controls li {
-      margin: 1em 1.7em; }
-
-.shadow {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
-
-.shadow-hover:hover {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transform: translateY(-2px); }
-
-.carousel-caption-overlay {
-  background-color: #333;
-  background-clip: border-box;
-  border: 1px solid rgba(51, 51, 51, 0.125);
-  border-radius: 0.25rem;
-  position: absolute;
-  opacity: 0.3;
-  display: flex;
-  flex-direction: column;
-  padding: 100%;
-  overflow: hidden;
-  left: 0; }
-
-.carousel-item {
-  background-color: #fffdfd !important; }
-
-.carousel-caption {
-  display: flex;
-  flex-direction: column;
-  max-width: 300px; }
-
-.section-title {
-  text-align: center;
-  margin: 0 auto 80px;
-  max-width: 360px;
-  padding-top: 15px; }
-  .section-title .inner {
-    border: 1px solid #333;
-    height: 50px; }
-  .section-title p {
-    max-width: 600px;
-    color: #808080;
-    font-style: italic;
-    line-height: 1.5em; }
-  .section-title h1 {
-    position: relative;
-    font-size: 1.3em;
-    font-weight: 600;
-    margin-top: -10px;
-    text-transform: uppercase;
-    color: #404040;
-    background: #fffdfd;
-    padding: 0 40px; }
-
-.site-main {
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1025px; }
-
-#sidebar {
-  max-width: 380px;
-  margin: 0 auto; }
-
-/* MORE THAN 75 */
-body {
-  background-color: skyBlue !important; }
-
-/* LESS THAN 75 */
-@media (max-width: 74.9em) {
-  body {
-    background-color: pink !important; } }
-
-/* LESS THAN 62 */
-@media (max-width: 61.9em) {
-  body {
-    background-color: blue !important; } }
-
-/* LESS THAN 48 */
-@media (max-width: 47.9em) {
-  body {
-    background-color: green !important; } }
-
-/* LESS THAN 34 */
-@media (max-width: 33.9em) {
-  body {
-    background-color: red !important; }
-  .controls-wrapper {
-    margin-left: calc(33%); } }
-
+/**
+* This is used to map the theme colors
+*/
 .hovereffect {
   width: 100%;
   height: 100%;
@@ -271,6 +86,254 @@ body {
     opacity: 1;
     filter: alpha(opacity=100);
     transform: translate3d(0, 0, 0); }
+
+.shadow {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+
+.shadow-hover:hover {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transform: translateY(-2px); }
+
+/* MORE THAN 75 */
+body {
+  background-color: skyBlue !important; }
+
+/* LESS THAN 75 */
+@media (max-width: 74.9em) {
+  body {
+    background-color: pink !important; } }
+
+/* LESS THAN 62 */
+@media (max-width: 61.9em) {
+  body {
+    background-color: blue !important; } }
+
+/* LESS THAN 48 */
+@media (max-width: 47.9em) {
+  body {
+    background-color: green !important; } }
+
+/* LESS THAN 34 */
+@media (max-width: 33.9em) {
+  body {
+    background-color: red !important; } }
+
+.level-0 {
+  z-index: 0 !important; }
+
+.level-1 {
+  z-index: 10 !important; }
+
+.level-2 {
+  z-index: 20 !important; }
+
+.level-3 {
+  z-index: 30 !important; }
+
+.level-4 {
+  z-index: 40 !important; }
+
+.level-5 {
+  z-index: 50 !important; }
+
+.level-6 {
+  z-index: 60 !important; }
+
+.level-7 {
+  z-index: 70 !important; }
+
+.page-content .wp-smiley,
+.entry-content .wp-smiley,
+.comment-content .wp-smiley {
+  border: none;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding: 0; }
+
+/* Make sure embeds and iframes fit their containers. */
+embed,
+iframe,
+object {
+  max-width: 100%; }
+
+/* Make sure logo link wraps around logo image. */
+.custom-logo-link {
+  display: inline-block; }
+
+.wp-caption {
+  margin-bottom: 1.5em;
+  max-width: 100%; }
+  .wp-caption img[class*="wp-image-"] {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
+  .wp-caption .wp-caption-text {
+    margin: 0.8075em 0; }
+
+.wp-caption-text {
+  text-align: center; }
+
+.gallery {
+  margin-bottom: 1.5em; }
+
+.gallery-item {
+  display: inline-block;
+  text-align: center;
+  vertical-align: top;
+  width: 100%; }
+  .gallery-columns-2 .gallery-item {
+    max-width: 50%; }
+  .gallery-columns-3 .gallery-item {
+    max-width: 33.33%; }
+  .gallery-columns-4 .gallery-item {
+    max-width: 25%; }
+  .gallery-columns-5 .gallery-item {
+    max-width: 20%; }
+  .gallery-columns-6 .gallery-item {
+    max-width: 16.66%; }
+  .gallery-columns-7 .gallery-item {
+    max-width: 14.28%; }
+  .gallery-columns-8 .gallery-item {
+    max-width: 12.5%; }
+  .gallery-columns-9 .gallery-item {
+    max-width: 11.11%; }
+
+.gallery-caption {
+  display: block; }
+
+/* Desktops and laptops ----------- */
+@media only screen and (min-width: 1224px) {
+  .nav-menu-wrapper {
+    width: 100%;
+    height: auto;
+    position: fixed;
+    z-index: 1; }
+    .nav-menu-wrapper nav {
+      padding: 0;
+      height: 100px; }
+      .nav-menu-wrapper nav .nav-link {
+        color: #fffdfd;
+        font-size: 1.1em; } }
+
+.nav-menu-wrapper .navbar {
+  transition: background 0.4s linear; }
+
+.nav-menu-wrapper .past-banner {
+  background-color: #333; }
+
+nav ul {
+  margin-left: 3em; }
+
+nav .menu-item {
+  padding: 1em; }
+  nav .menu-item a:focus, nav .menu-item a:hover, nav .menu-item a:active {
+    border-bottom: 3px solid #00576d; }
+
+.tns-outer {
+  max-width: 100%; }
+  .tns-outer .card {
+    max-width: 100%; }
+
+.tns-inner {
+  flex: 0 0 50%;
+  overflow-x: hidden; }
+
+.controls-wrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%; }
+  .controls-wrapper .playbutton-wrapper button {
+    display: none; }
+  .controls-wrapper .controls {
+    display: flex; }
+    .controls-wrapper .controls li {
+      margin: 1em 1.7em; }
+
+#sidebar {
+  z-index: 999;
+  background: #c1d82f;
+  color: #fff;
+  transition: all 1s;
+  max-width: 380px;
+  margin: 0 auto; }
+
+.carousel {
+  margin-bottom: 4rem;
+  margin-top: -10px; }
+
+.carousel-caption-overlay {
+  background-color: #333;
+  background-clip: border-box;
+  border: 1px solid rgba(51, 51, 51, 0.125);
+  border-radius: 0.25rem;
+  position: absolute;
+  opacity: 0.3;
+  display: flex;
+  flex-direction: column;
+  padding: 100%;
+  overflow: hidden;
+  left: 0; }
+
+.carousel-item {
+  height: 32rem;
+  background-color: #777; }
+  .carousel-item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 32rem; }
+
+.carousel-caption-wrapper {
+  display: flex;
+  justify-content: center; }
+  .carousel-caption-wrapper .carousel-caption {
+    margin-top: 2em;
+    color: #fffdfd;
+    text-align: center;
+    border-radius: 5px;
+    padding: 1em;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    max-width: 300px; }
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4; }
+  .featurette-heading {
+    font-size: 50px; } }
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem; } }
+
+.section-title {
+  text-align: center;
+  margin: 0 auto 80px;
+  max-width: 360px;
+  padding-top: 15px; }
+  .section-title .inner {
+    border: 1px solid #333;
+    height: 50px; }
+  .section-title p {
+    max-width: 600px;
+    color: #808080;
+    font-style: italic;
+    line-height: 1.5em; }
+  .section-title h1 {
+    position: relative;
+    font-size: 1.3em;
+    font-weight: 600;
+    margin-top: -10px;
+    text-transform: uppercase;
+    color: #404040;
+    background: #fffdfd;
+    padding: 0 40px; }
 
 /* Desktops and laptops ----------- */
 @media only screen and (min-width: 1224px) {
@@ -7513,6 +7576,7 @@ a.text-white:hover, a.text-white:focus {
   width: calc(100% / 70);
   height: 10px;
   float: left; }
+
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
 	 ========================================================================== */
@@ -7888,7 +7952,6 @@ figure {
   margin: 1em 0;
   /* Extra wide images within figure tags don't overflow the content area. */ }
 
-/* Text meant only for screen readers. */
 .screen-reader-text {
   border: 0;
   clip: rect(1px, 1px, 1px, 1px);
@@ -8051,68 +8114,3 @@ img:not(.tns-lazy-img),
   padding-left: 5px;
   content: '\25BA';
   font-size: 0.8em; }
-
-.page-content .wp-smiley,
-.entry-content .wp-smiley,
-.comment-content .wp-smiley {
-  border: none;
-  margin-bottom: 0;
-  margin-top: 0;
-  padding: 0; }
-
-/* Make sure embeds and iframes fit their containers. */
-embed,
-iframe,
-object {
-  max-width: 100%; }
-
-/* Make sure logo link wraps around logo image. */
-.custom-logo-link {
-  display: inline-block; }
-
-/*--------------------------------------------------------------
-## Captions
---------------------------------------------------------------*/
-.wp-caption {
-  margin-bottom: 1.5em;
-  max-width: 100%; }
-  .wp-caption img[class*="wp-image-"] {
-    display: block;
-    margin-left: auto;
-    margin-right: auto; }
-  .wp-caption .wp-caption-text {
-    margin: 0.8075em 0; }
-
-.wp-caption-text {
-  text-align: center; }
-
-/*--------------------------------------------------------------
-## Galleries
---------------------------------------------------------------*/
-.gallery {
-  margin-bottom: 1.5em; }
-
-.gallery-item {
-  display: inline-block;
-  text-align: center;
-  vertical-align: top;
-  width: 100%; }
-  .gallery-columns-2 .gallery-item {
-    max-width: 50%; }
-  .gallery-columns-3 .gallery-item {
-    max-width: 33.33%; }
-  .gallery-columns-4 .gallery-item {
-    max-width: 25%; }
-  .gallery-columns-5 .gallery-item {
-    max-width: 20%; }
-  .gallery-columns-6 .gallery-item {
-    max-width: 16.66%; }
-  .gallery-columns-7 .gallery-item {
-    max-width: 14.28%; }
-  .gallery-columns-8 .gallery-item {
-    max-width: 12.5%; }
-  .gallery-columns-9 .gallery-item {
-    max-width: 11.11%; }
-
-.gallery-caption {
-  display: block; }
