--- a/src/scss/custom/utils/_functions.scss
+++ b/src/scss/custom/utils/_functions.scss
@@ -1,5 +1,10 @@
 /**
 * This is used to map the theme colors
+* @example
+* body { 
+*    color: custom-color('dark-blue');
+* }
+*
 */
 @function custom-color($key) {
     @if map-has-key($theme-colors, $key) {
