--- a/src/scss/custom/utils/index.scss
+++ b/src/scss/custom/utils/index.scss
@@ -1,5 +1,5 @@
 @import 'functions';
 @import 'hover-effect';
 @import 'shadow';
-@import 'responsive'; // used for breakpoint visualisation
+// @import 'responsive'; // used for breakpoint visualisation
 @import 'z-index';
